--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2console
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:h2:mem:testdb
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2console
+#spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.url=jdbc:h2:mem:testdb
 
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/flight
+spring.datasource.username=root
+spring.datasource.password=password
+useSSl=false
+spring.jpa.show-swl=true
 
 cloud.name=dxpp9h6mk
 cloud.secret=FdYyqX2tKmaVBpTsi9ehGugF3wY
